--- a/next/my-app/package.json
+++ b/next/my-app/package.json
@@ -20,6 +20,8 @@
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/mongo-sanitize": "^1.0.3",
     "@types/node": "20.12.7",
     "@types/react": "18.2.79",
     "autoprefixer": "^10.4.19",
